--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
         package="rejasupotaro.arxiv.reader"
         >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
             android:name=".ArxivReaderApplication"
             android:allowBackup="true"
