--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,11 @@
 
 buildscript {
     ext.kotlin_version = '1.1.3-2'
+    ext.arch_version = "1.0.0-alpha7"
+
     repositories {
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -17,6 +20,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
 }
 
