--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.1.3-2'
     ext.arch_version = "1.0.0-alpha7"
+    ext.assertj_version = '2.8.0'
 
     repositories {
         jcenter()
