--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,12 @@
 
 buildscript {
     ext.kotlin_version = '1.1.2-5'
-    ext.arch_version = "1.0.0-alpha7"
+    ext.support_version = "26.0.0"
+    ext.constraint_layout_version = "1.0.2"
+    ext.arch_version = "1.0.0-alpha8"
     ext.assertj_version = '2.8.0'
+    ext.dagger_version = "2.11"
+    ext.espresso_version = "2.2.2"
 
     repositories {
         jcenter()
