--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,8 @@ dependencies {
     compile "com.android.support.constraint:constraint-layout:$constraint_layout_version"
     compile 'com.github.barteksc:android-pdf-viewer:2.6.1'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile('com.stanfy:gson-xml-java:0.1.+') {
-        exclude group: 'xmlpull', module: 'xmlpull'
-    }
+    compile 'com.github.smart-fun:XmlToJson:1.3.5'
+    compile "com.google.code.gson:gson:2.8.1"
     compile "android.arch.lifecycle:runtime:$arch_version"
     compile "android.arch.lifecycle:extensions:$arch_version"
     compile "android.arch.persistence.room:runtime:$arch_version"
