--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ allprojects {
         mavenCentral()
         maven { url 'https://maven.google.com' }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+        maven { url "https://jitpack.io" }
     }
 }
 
