--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     ext.assertj_version = '2.8.0'
     ext.dagger_version = "2.11"
     ext.espresso_version = "2.2.2"
+    ext.autobundle_version = "4.1.0"
 
     repositories {
         jcenter()
