--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.2-5'
+    ext.kotlin_version = '1.1.3-2'
+    ext.kotlin_coroutines_version = '0.17'
     ext.support_version = "26.0.0"
     ext.constraint_layout_version = "1.0.2"
     ext.arch_version = "1.0.0-alpha8"
