--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     ext.dagger_version = "2.11"
     ext.espresso_version = "2.2.2"
     ext.autobundle_version = "4.1.0"
+    ext.stetho_version = "1.5.0"
 
     repositories {
         jcenter()
