--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,10 +54,6 @@ dependencies {
     compile "com.android.support:cardview-v7:$support_version"
     compile "com.android.support:design:$support_version"
     compile "com.android.support.constraint:constraint-layout:$constraint_layout_version"
-    compile 'com.github.barteksc:android-pdf-viewer:2.6.1'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'com.github.smart-fun:XmlToJson:1.3.5'
-    compile "com.google.code.gson:gson:2.8.1"
     compile "android.arch.lifecycle:runtime:$arch_version"
     compile "android.arch.lifecycle:extensions:$arch_version"
     compile "android.arch.persistence.room:runtime:$arch_version"
@@ -76,7 +72,6 @@ dependencies {
     kapt "com.github.yatatsu:autobundle-processor:$autobundle_version"
 
     testCompile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    testCompile 'junit:junit:4.12'
     testCompile("android.arch.core:core-testing:$arch_version", {
         exclude group: 'com.android.support', module: 'support-compat'
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -100,6 +95,12 @@ dependencies {
     androidTestCompile("android.arch.core:core-testing:$arch_version", {
     })
     androidTestCompile "org.assertj:assertj-core:$assertj_version"
+    compile 'com.github.barteksc:android-pdf-viewer:2.6.1'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.github.smart-fun:XmlToJson:1.3.5'
+    compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
 
 repositories {
