--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,15 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             >
-
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.paper.list.PaperListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.paper.search.PaperSearchActivity" />
+        <activity android:name=".ui.paper.view.PaperViewActivity" />
     </application>
 
 </manifest>
