--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     ext.espresso_version = "2.2.2"
     ext.autobundle_version = "4.1.0"
     ext.stetho_version = "1.5.0"
+    ext.joda_version = "2.9.9"
 
     repositories {
         jcenter()
