--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,12 @@ dependencies {
     compile "com.facebook.stetho:stetho-js-rhino:$stetho_version"
     compile "com.facebook.stetho:stetho-okhttp3:$stetho_version"
     compile "net.danlew:android.joda:$joda_version"
+    compile 'com.github.barteksc:android-pdf-viewer:2.6.1'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.github.smart-fun:XmlToJson:1.3.5'
+    compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile "com.google.android:flexbox:$flexbox_version"
 
     kapt "android.arch.lifecycle:compiler:$arch_version"
     kapt "android.arch.persistence.room:compiler:$arch_version"
@@ -73,6 +79,7 @@ dependencies {
     kapt "com.github.yatatsu:autobundle-processor:$autobundle_version"
 
     testCompile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    testCompile 'junit:junit:4.12'
     testCompile("android.arch.core:core-testing:$arch_version", {
         exclude group: 'com.android.support', module: 'support-compat'
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -96,12 +103,6 @@ dependencies {
     androidTestCompile("android.arch.core:core-testing:$arch_version", {
     })
     androidTestCompile "org.assertj:assertj-core:$assertj_version"
-    compile 'com.github.barteksc:android-pdf-viewer:2.6.1'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'com.github.smart-fun:XmlToJson:1.3.5'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
 }
 
 repositories {
