--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     ext.autobundle_version = "4.1.0"
     ext.stetho_version = "1.5.0"
     ext.joda_version = "2.9.9"
+    ext.flexbox_version = "0.3.0"
 
     repositories {
         jcenter()
