--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "com.google.android:flexbox:$flexbox_version"
+    compile "com.mikepenz:iconics-core:2.9.1@aar"
+    compile "com.mikepenz:iconics-views:2.9.2@aar"
+    compile "com.mikepenz:google-material-typeface:3.0.1.1.original@aar"
 
     kapt "android.arch.lifecycle:compiler:$arch_version"
     kapt "android.arch.persistence.room:compiler:$arch_version"
