Split gradle file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,69 +46,4 @@ kapt {
     generateStubs = true
 }
 
-dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
-    compile "com.android.support:appcompat-v7:$support_version"
-    compile "com.android.support:recyclerview-v7:$support_version"
-    compile "com.android.support:cardview-v7:$support_version"
-    compile "com.android.support:design:$support_version"
-    compile "com.android.support.constraint:constraint-layout:$constraint_layout_version"
-    compile "android.arch.lifecycle:runtime:$arch_version"
-    compile "android.arch.lifecycle:extensions:$arch_version"
-    compile "android.arch.persistence.room:runtime:$arch_version"
-    compile "com.google.dagger:dagger:$dagger_version"
-    compile "com.google.dagger:dagger-android:$dagger_version"
-    compile "com.google.dagger:dagger-android-support:$dagger_version"
-    compile "com.github.yatatsu:autobundle:$autobundle_version"
-    compile "com.facebook.stetho:stetho:$stetho_version"
-    compile "com.facebook.stetho:stetho-js-rhino:$stetho_version"
-    compile "com.facebook.stetho:stetho-okhttp3:$stetho_version"
-    compile "net.danlew:android.joda:$joda_version"
-    compile 'com.github.barteksc:android-pdf-viewer:2.6.1'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'com.github.smart-fun:XmlToJson:1.3.5'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile "com.google.android:flexbox:$flexbox_version"
-    compile "com.mikepenz:iconics-core:2.9.1@aar"
-    compile "com.mikepenz:iconics-views:2.9.2@aar"
-    compile "com.mikepenz:google-material-typeface:3.0.1.1.original@aar"
-
-    kapt "android.arch.lifecycle:compiler:$arch_version"
-    kapt "android.arch.persistence.room:compiler:$arch_version"
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    kapt "com.github.yatatsu:autobundle-processor:$autobundle_version"
-
-    testCompile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    testCompile 'junit:junit:4.12'
-    testCompile("android.arch.core:core-testing:$arch_version", {
-        exclude group: 'com.android.support', module: 'support-compat'
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.android.support', module: 'support-core-utils'
-    })
-    testCompile "org.assertj:assertj-core:$assertj_version"
-
-    androidTestCompile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    androidTestCompile "com.android.support:appcompat-v7:$support_version"
-    androidTestCompile "com.android.support:recyclerview-v7:$support_version"
-    androidTestCompile "com.android.support:support-v4:$support_version"
-    androidTestCompile "com.android.support:design:$support_version"
-    androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_version", {
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.google.code.findbugs', module: 'jsr305'
-    })
-    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$espresso_version", {
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.google.code.findbugs', module: 'jsr305'
-    })
-    androidTestCompile("android.arch.core:core-testing:$arch_version", {
-    })
-    androidTestCompile "org.assertj:assertj-core:$assertj_version"
-}
-
-repositories {
-    mavenCentral()
-}
+apply from: "./dependencies.gradle"
