--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "rejasupotaro.arxiv.reader.ArxivReaderTestRunner"
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -21,6 +21,12 @@ android {
         }
     }
     buildTypes {
+        debug {
+            applicationIdSuffix '.debug'
+            versionNameSuffix "-debug"
+            debuggable true
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -40,10 +46,18 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
+    configurations.all {
+        resolutionStrategy.force "com.google.code.findbugs:jsr305:$jsr305_version"
+    }
 }
 
 kapt {
     generateStubs = true
+}
+
+apply plugin: 'kotlin-allopen'
+allOpen {
+    annotation 'rejasupotaro.arxiv.reader.OpenClass'
 }
 
 apply from: "./dependencies.gradle"
