--- a/build.gradle
+++ b/build.gradle
@@ -13,17 +13,19 @@ buildscript {
     ext.stetho_version = "1.5.0"
     ext.joda_version = "2.9.9"
     ext.flexbox_version = "0.3.0"
+    ext.jsr305_version = "3.0.1"
+    ext.mockito_version = "2.8.9"
+    ext.dexmaker_mockito= "2.2.0"
+    ext.mockito_kotlin_version = "1.5.0"
 
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath "com.android.tools.build:gradle:2.3.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
     }
 }
 
