--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,3 +61,6 @@ allOpen {
 }
 
 apply from: "./dependencies.gradle"
+dependencies {
+    compile 'com.android.support.constraint:constraint-layout:+'
+}
