--- a/nlp/dependencies.gradle
+++ b/nlp/dependencies.gradle
@@ -1,4 +1,9 @@
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    testCompile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    testCompile "junit:junit:4.12"
+    testCompile "org.assertj:assertj-core:$assertj_version"
+    testCompile "com.nhaarman:mockito-kotlin-kt1.1:$mockito_kotlin_version"
 }
