--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -23,7 +23,7 @@ dependencies {
     compile "com.github.barteksc:android-pdf-viewer:2.6.1"
     compile "com.squareup.okhttp3:okhttp:3.8.1"
     compile "com.github.smart-fun:XmlToJson:1.3.5"
-    compile "com.google.code.gson:gson:2.8.1"
+    compile "com.google.code.gson:gson:2.8.0"
     compile "com.android.support.constraint:constraint-layout:1.0.2"
     compile "com.google.android:flexbox:$flexbox_version"
     compile "com.mikepenz:iconics-core:2.9.1@aar"
@@ -51,6 +51,7 @@ dependencies {
     androidTestCompile "com.android.support:recyclerview-v7:$support_version"
     androidTestCompile "com.android.support:support-v4:$support_version"
     androidTestCompile "com.android.support:design:$support_version"
+    androidTestCompile "android.arch.persistence.room:testing:$arch_version"
     androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_version", {
         exclude group: "com.android.support', module: 'support-annotations"
         exclude group: "com.google.code.findbugs', module: 'jsr305"
