--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             >
+
+        <!-- Activities -->
         <activity android:name=".ui.paper.list.PaperListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +27,9 @@
         <activity android:name=".ui.paper.read.PaperReadActivity" />
         <activity android:name=".ui.paper.view.PaperViewActivity" />
 
+        <!-- Services -->
         <service android:name=".job.PdfDownloadService" />
+        <service android:name=".job.PaperSimilarityUpdateService" />
     </application>
 
 </manifest>
