--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile "com.mikepenz:iconics-core:2.9.1@aar"
     compile "com.mikepenz:iconics-views:2.9.2@aar"
     compile "com.mikepenz:google-material-typeface:3.0.1.1.original@aar"
+    compile "org.tensorflow:tensorflow-android:$tensorflow_version"
 
     kapt "android.arch.lifecycle:compiler:$arch_version"
     kapt "android.arch.persistence.room:compiler:$arch_version"
