--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     ext.stetho_version = "1.5.0"
     ext.joda_version = "2.9.9"
     ext.flexbox_version = "0.3.0"
+    ext.tensorflow_version = "1.3.1-alpha"
     ext.jsr305_version = "3.0.1"
     ext.mockito_version = "2.8.9"
     ext.dexmaker_mockito= "2.2.0"
